feat : 이동 로직 분리